--- a/containers/themes/base/login/messages/messages_en.properties
+++ b/containers/themes/base/login/messages/messages_en.properties
@@ -1,4 +1,5 @@
-doLogIn=Log In
+doLogIn=Iniciar sesi\u00F3n
+logIn=Ingrese a su cuenta
 doRegister=Register
 doCancel=Cancel
 doSubmit=Submit
@@ -50,14 +51,14 @@ recaptchaNotConfigured=Recaptcha is required, but not configured
 consentDenied=Consent denied.
 noAccount=New user?
 username=Username
-usernameOrEmail=Username or email
+usernameOrEmail=Usuario o correo electr\u00F3nico
 firstName=First name
 givenName=Given name
 fullName=Full name
 lastName=Last name
 familyName=Family name
 email=Email
-password=Password
+password=Contrase\u00F1a
 passwordConfirm=Confirm password
 passwordNew=New Password
 passwordNewConfirm=New Password confirmation
