Se agregan las imágenes y se utilizan botones de keycloak

--- a/containers/themes/base/login/messages/messages_en.properties
+++ b/containers/themes/base/login/messages/messages_en.properties
@@ -1,6 +1,6 @@
 doLogIn=Iniciar sesi\u00F3n
 logIn=Ingrese a su cuenta
-doRegister=Register
+doRegister=Registrarme ahora
 doCancel=Cancel
 doSubmit=Submit
 doBack=Back
@@ -49,7 +49,7 @@ termsPlainText=Terms and conditions to be defined.
 recaptchaFailed=Invalid Recaptcha
 recaptchaNotConfigured=Recaptcha is required, but not configured
 consentDenied=Consent denied.
-noAccount=New user?
+noAccount=\u00BFNo tiene una cuenta todav\u00EDa?
 username=Username
 usernameOrEmail=Usuario o correo electr\u00F3nico
 firstName=First name
